# oh-my-gtm

./: .env.example  .gitignore  AGENT.md  Makefile  README.md  business-purpose.md  docker-compose.yml  linkedin-limits-research.md  linkedin-research-report.md  prompts.md  pyproject.toml
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/sessions/: 65a4d945-9747-4f38-9acd-eb1bf8325be6.json
docs/: PRD.md  architecture.md  decisions-and-ambiguities.md
migrations/: 0001_initial.sql
oh_my_gtm/: __init__.py  config.py  database.py  models.py  schemas.py
oh_my_gtm/api/: app.py
oh_my_gtm/daemon/: __init__.py  driver.py  worker.py
oh_my_gtm/orchestration/: workflow.py
oh_my_gtm/services/: analytics.py  audit.py  briefing.py  browser_executor.py  chrome_linkedin.py  context.py  execution.py  guardrails.py  linkedin_agent.py  linkedin_search.py  llm.py  messaging.py  optimization.py  outreach_artifacts.py  replies.py  research.py  signal_inbox.py  targeting.py
scripts/: linkedin_search_collector.py  seed_demo.py
tests/: test_briefing.py  test_browser_executor.py  test_context.py  test_daemon_worker.py  test_linkedin_agent.py  test_linkedin_search.py  test_llm.py  test_replies_analytics.py  test_research.py  test_signal_inbox.py  test_targeting_and_messaging.py  test_workflow_api.py
