[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-gtm"
version = "0.1.0"
description = "Policy-aware autonomous GTM agent for B2B outbound research and messaging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy>=2.0,<3",
  "starlette>=0.27,<1.1",
  "uvicorn>=0.30,<1",
  "httpx>=0.28,<1",
]

[project.scripts]
oh-my-gtm-daemon = "oh_my_gtm.daemon.driver:main"

[tool.setuptools.packages.find]
include = ["oh_my_gtm*"]

[tool.unittest]
testpaths = ["tests"]
